// Copyright 2022 The ChromiumOS Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

package perfetto.protos;

import "third_party/perfetto/protos/perfetto/metrics/metrics.proto";

message ModeSwitching {
  optional int64 latency_ms = 1;
}

message CcaMetrics {
  repeated ModeSwitching mode_switching = 1;
}

extend TraceMetrics {
  optional CcaMetrics cca_metrics = 800;
}
